--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
+<!-- ICS2O-Unit1-03-HTML-hello_world -->
+<html lang="en-ca">
   <head>
-    <title>Page Title</title>
+    <meta charset="utf-8">
+    <meta name="description" content="My first webpage, with proper style">
+    <meta name="keywords" content="mths, ics2o, unit1, lesson3">
+    <meta name="author" content="Chloe Jornitz">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Webpage, With Proper Style</title>
   </head>
 
   <body>
