--- a/index.html
+++ b/index.html
@@ -9,9 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Webpage, With Proper Style</title>
   </head>
-
-  <body>
-    <h1>Hello, World!</h1>
+  <style>
+    #my-header {
+      background-color: rgb(27, 0, 61);
+      color: hsl(67, 100%, 78%);
+      font-family: monospace;
+      padding: 40px;
+      text-align: center;
+    }
+  </style>
+  <body style="background-color:honeydew;"
+    <h1 id="my-header">Stlye is important</h1>
+    <p style="background-color: #9fcaff;" style="color:black">Proper HTML style is important</p>
+    <img src="./images/html_style_guide.jpg">
+    <p>
+      <a href="./cities_html">Travel to my cities page</a>
+    </p>
   </body>
-  
 </html>
