corrected and finished index.html

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Webpage, With Proper Style</title>
   </head>
+  
   <style>
     #my-header {
-      background-color: rgb(27, 0, 61);
-      color: hsl(67, 100%, 78%);
-      font-family: monospace;
+      background-color:rgb(3, 3, 77);
+      color:hsl(59, 100%, 79%);
       padding: 40px;
       text-align: center;
-    }
+      font-size: 250%;
+    } 
   </style>
-  <body style="background-color:honeydew;"
-    <h1 id="my-header">Stlye is important</h1>
-    <p style="background-color: #9fcaff;" style="color:black">Proper HTML style is important</p>
+  <body style="background-color: aliceblue;">
+    <h1 id="my-header">Style is important</h1>
+    <p style="background-color: #9fcaff; font-family: monospace;">Proper HTML style is important</p>
     <img src="./images/html_style_guide.jpg">
     <p>
       <a href="./cities_html">Travel to my cities page</a>
