added to cities

--- a/cities.html
+++ b/cities.html
@@ -9,4 +9,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cities</title>
   </head>
+
+  <style>
+    /* Style the element with the id "myHeader" */
+    #myHeader {
+      background-color: white;
+      color: black;
+      font-size: 250%;
+      border: 10px solid firebrick;
+      padding: 40px;
+      text-align: center;
+    }
+    /* Style all elements with the class name "city" */
+    .city {
+      background-color: bisque;
+      color: black;
+      padding: 10px;
+    }
+  </style>
+
+  <body style="background-color: red;">
+    <!-- An element with a unique id -->
+    <h1 id="myHeader">Capital Cities</h1>
+
+    <!-- Multiple elements with the same case-->
+    <h2 class="city">Ottawa</h2>
+    <p>Ottawa is the capital city of Canada.</p>
+
+</body>
 </html>
