--- a/cities.html
+++ b/cities.html
@@ -13,28 +13,44 @@
   <style>
     /* Style the element with the id "myHeader" */
     #myHeader {
-      background-color: white;
-      color: black;
+      background-color: green;
+      color: white;
       font-size: 250%;
-      border: 10px solid firebrick;
+      border: 10px solid darkgreen;
       padding: 40px;
       text-align: center;
     }
     /* Style all elements with the class name "city" */
     .city {
-      background-color: bisque;
-      color: black;
+      background-color: palegreen;
+      color: darkgreen;
+      border: 4px solid lightgreen;
       padding: 10px;
     }
   </style>
 
-  <body style="background-color: red;">
+  <body style="background-color: powderblue;">
+    <!-- An image of a world map -->
+    <img src="./images/earth_map_image.jpg"
+
     <!-- An element with a unique id -->
     <h1 id="myHeader">Capital Cities</h1>
 
     <!-- Multiple elements with the same case-->
     <h2 class="city">Ottawa</h2>
     <p>Ottawa is the capital city of Canada.</p>
+    <img src="./images/canada_flag.png"> 
 
-</body>
+    <h2 class="city">London</h2>
+    <p>London is the capital city of England.</p>
+    <img src="./images/united_kingdom_flag.png">
+
+    <h2 class="city">Paris</h2>
+    <p>Paris is the capital city of France.</p>
+    <img src="./images/france_flag.png">
+
+    <h2 class="city">Vatican City</h2>
+    <p>Vatican City is the capital of Vatican City.</p>
+    <img src="./images/vatican_city_flag.png">
+  </body>
 </html>
