--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p style="background-color: #9fcaff; font-family: monospace;">Proper HTML style is important</p>
     <img src="./images/html_style_guide.jpg">
     <p>
-      <a href="./cities_html">Travel to my cities page</a>
+      <a href="./cities.html">Travel to my cities page</a>
     </p>
   </body>
 </html>
