--- a/index.html
+++ b/index.html
@@ -8,18 +8,11 @@
     <meta name="author" content="Chloe Jornitz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Webpage, With Proper Style</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
-  <style>
-    #my-header {
-      background-color:rgb(3, 3, 77);
-      color:hsl(59, 100%, 79%);
-      padding: 40px;
-      text-align: center;
-      font-size: 250%;
-    } 
-  </style>
-  <body style="background-color: aliceblue;">
-    <h1 id="my-header">Style is important</h1>
+
+  <body>
+    <h1>Style is important</h1>
     <p style="background-color: #9fcaff; font-family: monospace;">Proper HTML style is important</p>
     <img src="./images/html_style_guide.jpg">
     <p>
