--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- ICS2O-Unit1-03-HTML-hello_world -->
 <html lang="en-ca">
+
   <head>
     <meta charset="utf-8">
     <meta name="description" content="My first webpage, with proper style">
@@ -13,10 +14,11 @@
 
   <body>
     <h1>Style is important</h1>
-    <p style="background-color: #9fcaff; font-family: monospace;">Proper HTML style is important</p>
+    <p class="paragraph1">Proper HTML style is important</p>
     <img src="./images/html_style_guide.jpg">
     <p>
       <a href="./cities.html">Travel to my cities page</a>
     </p>
   </body>
+
 </html>
