fixed class paragraph1 and image

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
   <body>
     <h1>Style is important</h1>
-    <p class="paragraph1">Proper HTML style is important</p>
+    <p class="paragraph1">Proper HTML style is important.</p>
     <img src="./images/html_style_guide.jpg">
     <p>
       <a href="./cities.html">Travel to my cities page</a>
     </p>
   </body>
+
 
 </html>
