--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p class="paragraph1">Proper HTML style is important.</p>
     <img src="./images/html_style_guide.jpg">
     <p>
-      <a href="./cities.html">Travel to my cities page</a>
+      <a class="image" href="./cities.html">Travel to my cities page</a>
     </p>
   </body>
 
