--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <h1>Style is important</h1>
     <p class="paragraph1">Proper HTML style is important.</p>
-    <img src="./images/html_style_guide.jpg">
+    <img class="image" src="./images/html_style_guide.jpg">
     <p>
-      <a class="image" href="./cities.html">Travel to my cities page</a>
+      <a href="./cities.html">Travel to my cities page</a>
     </p>
   </body>
 
