border and padding

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <p class="paragraph1">Proper HTML style is important.</p>
     <img class="image" src="./images/html_style_guide.jpg">
     <p>
-      <a href="./cities.html">Travel to my cities page</a>
+      <a class="link" href="./cities.html">Travel to my cities page</a>
     </p>
   </body>
-
-
 </html>
