--- a/cities.html
+++ b/cities.html
@@ -7,36 +7,17 @@
     <meta name="keywords" content="mths, cities, ics2o, unit1, lesson3">
     <meta name="author" content="Chloe Jornitz">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles_cities.css">
     <title>Cities</title>
   </head>
-
-  <style>
-    /* Style the element with the id "myHeader" */
-    #myHeader {
-      background-color: green;
-      color: white;
-      font-size: 250%;
-      border: 10px solid darkgreen;
-      padding: 40px;
-      text-align: center;
-    }
-    /* Style all elements with the class name "city" */
-    .city {
-      background-color: palegreen;
-      color: darkgreen;
-      border: 4px solid lightgreen;
-      padding: 10px;
-    }
-  </style>
-
   <body style="background-color: powderblue;">
     <!-- An element with a unique id -->
     <h1 id="myHeader">Capital Cities</h1>
 
-<!-- An image of a world map -->
-    <img src="./images/earth_map_image.jpg"
+   <!-- An image of a world map -->
+    <img id="map" src="./images/earth_map_image.jpg">
 
-    <!-- Multiple elements with the same case-->
+    <!--Multiple elements with the same case-->
     <h2 class="city">Ottawa</h2>
     <p>Ottawa is the capital city of Canada.</p>
     <img src="./images/canada_flag.png"> 
