--- a/cities.html
+++ b/cities.html
@@ -15,23 +15,23 @@
     <h1 id="myHeader">Capital Cities</h1>
 
    <!-- An image of a world map -->
-    <img id="map" src="./images/earth_map_image.jpg">
+    <img id="map" src="./images/earth_map_image.jpg" alt="World map">
 
     <!--Multiple elements with the same case-->
     <h2 class="city">Ottawa</h2>
     <p>Ottawa is the capital city of Canada.</p>
-    <img src="./images/canada_flag.png"> 
+    <img src="./images/canada_flag.png" alt="flag of Canada"> 
 
     <h2 class="city">London</h2>
     <p>London is the capital city of England.</p>
-    <img src="./images/united_kingdom_flag.png">
+    <img src="./images/united_kingdom_flag.png" alt="flag of United Kingdom">
 
     <h2 class="city">Paris</h2>
     <p>Paris is the capital city of France.</p>
-    <img src="./images/france_flag.png">
+    <img src="./images/france_flag.png" alt="flag of France">
 
     <h2 class="city">Vatican City</h2>
     <p>Vatican City is the capital of Vatican City.</p>
-    <img src="./images/vatican_city_flag.png">
+    <img src="./images/vatican_city_flag.png" alt="flag of Vatican City">
   </body>
 </html>
