--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <h1>Style is important</h1>
     <p class="paragraph1">Proper HTML style is important.</p>
-    <img class="image" src="./images/html_style_guide.jpg">
+    <img class="image" src="./images/html_style_guide.jpg" alt="HTML style quide">
     <p>
       <a class="link" href="./cities.html">Travel to my cities page</a>
     </p>
